--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -1,4 +1,4 @@
-name: Assemble
+name: ktlintCheck
 on:
   push:
     branches: [ main ]
@@ -19,4 +19,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COMMENT_URL: ${{ github.event.pull_request.comments_url }}
       run: |
-        ./gradlew assembleRelease
+        ./gradlew ktlintCheck
