--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -8,15 +8,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Run Script
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        COMMENT_URL: ${{ github.event.pull_request.comments_url }}
-      run: |
-        ./gradlew ktlintCheck
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: ktlintCheck
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: ktlintCheck
