--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,17 +8,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Run Script
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        COMMENT_URL: ${{ github.event.pull_request.comments_url }}
-      run: |
-        ./gradlew assembleRelease
-        ./gradlew lintRelease
-        ./gradlew testReleaseUnitTest
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: assembleRelease
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: assembleRelease
+      - name: lintRelease
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: lintRelease
+      - name: testReleaseUnitTest
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: testReleaseUnitTest
