--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -2,6 +2,10 @@ name: ktlintCheck
 on:
   push:
     branches: [ main ]
+  pull_request:
+    types: [ opened ]
+    branches:
+      - "dependabot/**"
 permissions:
   contents: read
 jobs:
