--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,10 @@ name: Test
 on:
   push:
     branches: [ main ]
+  pull_request:
+    types: [ opened ]
+    branches:
+      - "dependabot/**"
 permissions:
   contents: read
 jobs:
