--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,9 +7,13 @@ version: 2
 updates:
   - package-ecosystem: "gradle"
     directory: "/"
+    target-branch: main
+    open-pull-requests-limit: 10
     schedule:
       interval: "daily"
   - package-ecosystem: "gradle"
     directory: "/app/"
+    target-branch: main
+    open-pull-requests-limit: 10
     schedule:
       interval: "daily"
