--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -1,11 +1,6 @@
 name: ktlintCheck
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    types: [ opened ]
-    branches:
-      - "dependabot/**"
+  workflow_call:
 permissions:
   contents: read
 jobs:
