--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -8,21 +8,5 @@ jobs:
     if: ${{ github.actor == 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-      - name: assembleRelease
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: assembleRelease
-      - name: lintRelease
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: lintRelease
-      - name: testReleaseUnitTest
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: testReleaseUnitTest
+      - uses: ./.github/workflows/call_ktlint
+      - uses: ./.github/workflows/call_test
