--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -10,5 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/workflows/call_ktlint
-      - uses: ./.github/workflows/call_test
+      - uses: .github/workflows/call_ktlint
+      - uses: .github/workflows/call_test
