--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -6,9 +6,9 @@ permissions:
   contents: read
 jobs:
   build:
-    if: ${{ github.actor == 'dependabot[bot]' }}
+    if: ${{ github.event.label.name }} == "dependencies"
     runs-on: ubuntu-latest
+    - uses: matsudamper/actions_test/.github/workflows/call_ktlint@${{ github.sha }}
+    - uses: .github/workflows/call_test
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/workflows/call_ktlint
-      - uses: ./.github/workflows/call_test
