--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -5,10 +5,11 @@ on:
 permissions:
   contents: read
 jobs:
+  hoge:
+    uses: matsudamper/actions_test/.github/workflows/call_ktlint@${{ github.sha }}
+    uses: .github/workflows/call_test
   build:
     if: ${{ github.event.label.name }} == "dependencies"
     runs-on: ubuntu-latest
-    - uses: matsudamper/actions_test/.github/workflows/call_ktlint@${{ github.sha }}
-    - uses: .github/workflows/call_test
     steps:
       - uses: actions/checkout@v3
