--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -6,8 +6,8 @@ permissions:
   contents: read
 jobs:
   hoge:
-    uses: matsudamper/actions_test/.github/workflows/call_ktlint@${{ github.sha }}
-    uses: .github/workflows/call_test
+    - uses: matsudamper/actions_test/.github/workflows/call_ktlint@${{ github.sha }}
+    - uses: .github/workflows/call_test
   build:
     if: ${{ github.event.label.name }} == "dependencies"
     runs-on: ubuntu-latest
