--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -5,9 +5,9 @@ on:
 permissions:
   contents: read
 jobs:
+  hoge:
+    uses: .github/workflows/call_test@latest
   build:
     if: ${{ github.event.label.name }} == "dependencies"
-    uses: matsudamper/actions_test/.github/workflows/call_ktlint@${{ github.sha }}
-    uses: .github/workflows/call_test
     runs-on: ubuntu-latest
     steps:
