--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -6,7 +6,7 @@ permissions:
   contents: read
 jobs:
   hoge:
-    uses: .github/workflows/call_test.yml@latest
+    uses: ./.github/workflows/call_test.yml@latest
   build:
     if: ${{ github.event.label.name }} == "dependencies"
     runs-on: ubuntu-latest
