--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -3,12 +3,17 @@ on:
   pull_request:
   workflow_call:
   workflow_dispatch:
+  issue_comment:
+    types:
+      - created
 
 permissions:
   contents: read
 
 jobs:
   test:
+    if: ${{ github.event.comment.body == './test'}}
     uses: ./.github/workflows/call_test.yml
   lint:
+    if: ${{ github.event.comment.body == './test'}}
     uses: ./.github/workflows/call_ktlint.yml
