--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -3,9 +3,8 @@ on:
   pull_request:
   workflow_call:
   workflow_dispatch:
-  issue_comment:
-    types:
-      - created
+  pull_request_comment:
+    types: [ submitted ]
 
 permissions:
   contents: read
