--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -1,17 +1,14 @@
 name: merge_test
 on:
+  workflow_call:
   workflow_dispatch:
-  pull_request_comment:
-    types: [ submitted ]
 
 permissions:
   contents: read
 
 jobs:
   test:
-    if: ${{ github.event.comment.body == './test'}}
     uses: ./.github/workflows/call_test.yml
   lint:
-    if: ${{ github.event.comment.body == './test'}}
     uses: ./.github/workflows/call_ktlint.yml
 
