--- a/.github/workflows/call_test.yml
+++ b/.github/workflows/call_test.yml
@@ -4,7 +4,7 @@ on:
 permissions:
   contents: read
 jobs:
-  build:
+  main:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
