--- a/.github/workflows/deploy_app_distribution.yml
+++ b/.github/workflows/deploy_app_distribution.yml
@@ -1,7 +1,7 @@
 name: dist firebase
 on:
-  pull_request_comment:
-    types: [ submitted ]
+  issue_comment:
+    types: [ created ]
 
 permissions:
   contents: read
