--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -11,5 +11,5 @@ jobs:
     if: ${{ github.run_attempt != 1 }}
     uses: ./.github/workflows/call_test.yml
   lint:
-    if: ${{ github.run_attempt != "1" }}
+    if: ${{ github.run_attempt != 1 }}
     uses: ./.github/workflows/call_ktlint.yml
