--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -7,7 +7,7 @@ permissions:
   contents: read
 
 jobs:
-  dist_app_distribution:
+  test:
     if: ${{ github.event.issue.pull_request && github.event.comment.body == './distFirebase' }}
     uses: ./github/workflows/call_deploy_app_distribution.yml
 
