--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -9,5 +9,8 @@ permissions:
 jobs:
   test:
     if: ${{ github.event.issue.pull_request && github.event.comment.body == './distFirebase' }}
-    uses: ./github/workflows/call_deploy_app_distribution.yml
-
+    #    uses: ./github/workflows/call_deploy_app_distribution.yml@latest
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo ${{ github.event.issue.pull_request }}
