--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -9,7 +9,7 @@ permissions:
 jobs:
   test:
     if: ${{ github.event.issue.pull_request && github.event.comment.body == './distFirebase' }}
-    uses: ./github/workflows/call_deploy_app_distribution.yml@latest
+    uses: ./.github/workflows/call_deploy_app_distribution.yml
 #    runs-on: ubuntu-latest
 #    steps:
 #      - run: |
