--- a/.github/workflows/call/deploy_app_distribution.yml
+++ b/.github/workflows/call/deploy_app_distribution.yml
@@ -20,3 +20,9 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: assembleRelease -x lint
+      - run: |
+          echo "1.1.0" > /version.txt
+      - uses: actions/upload-artifact@v3
+        with:
+          name: app distribution version
+          path: /version.txt
