--- a/.github/workflows/dist_firebase_dispatch.yml
+++ b/.github/workflows/dist_firebase_dispatch.yml
@@ -7,6 +7,6 @@ permissions:
   contents: read
 
 jobs:
-  test:
+  issue_comment:
     if: ${{ github.event.issue.pull_request && github.event.comment.body == './distFirebase' }}
-    uses: ./.github/workflows/call_deploy_app_distribution.yml
+    uses: ./.github/workflows/call/deploy_app_distribution.yml
