--- a/.github/workflows/call_deploy_app_distribution.yml
+++ b/.github/workflows/call_deploy_app_distribution.yml
@@ -25,4 +25,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: app distribution version
-          path: /version.txt
+          path: ~/version.txt
