--- a/.github/workflows/call_deploy_app_distribution.yml
+++ b/.github/workflows/call_deploy_app_distribution.yml
@@ -13,6 +13,12 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - name: set
+        with:
+          Hoge: hogehoge
+        run: |
+          echo "echo"
+          echo "$Hoge"
       - uses: octokit/request-action@v2.x
         id: check_runs
         with:
