--- a/.github/workflows/call_deploy_app_distribution.yml
+++ b/.github/workflows/call_deploy_app_distribution.yml
@@ -46,6 +46,9 @@ jobs:
     steps:
       - run: |
           echo ${{ github.event.pull_request.comments_url }}
+          echo ${{ github.event.pull_request }}
+          echo ${{ github.event }}
+          echo ${{ github }}
       - uses: octokit/request-action@v2.x
         id: comment
 
