--- a/.github/workflows/call_deploy_app_distribution.yml
+++ b/.github/workflows/call_deploy_app_distribution.yml
@@ -55,7 +55,7 @@ jobs:
         id: comment
 
         with:
-          route: POST ${{ github.event.pull_request.comments_url }}
+          route: POST ${{ github.event.issue.comments_url }}
           owner: ${{ github.repository_owner }}
           repo: ${{ github.event.repository.name }}
           body: ${{ toJSON(env.REQUEST_BODY) }}
