--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -16,4 +16,31 @@ jobs:
       - name: ktlintCheck
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: ktlintCheck
+          arguments: ktlintFormat
+      - name: set
+        id: vars
+        run: |
+          echo ::set-output name=html::$(cat << EOS
+          [
+            {
+              "path": "",
+              "start_line": "",
+              "end_line": ""
+            }
+          ]
+          EOS
+          )
+      - name: ktlint check-runs
+        uses: octokit/request-action@v2.x
+        id: create_check_run
+        with:
+          route: POST /repos/{owner}/{repo}/check-runs
+          owner: ${{ github.repository_owner }}
+          repo: ${{ github.event.repository.name }}
+          name: ktlint
+          head_sha: ${{ github.sha }}
+          conclusion: "success"
+          status: "completed"
+          output: |
+            title: Summary
+            summary: ${{ steps.vars.outputs.html }}
