--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -40,3 +40,5 @@ jobs:
           conclusion: "success"
           status: "failure"
           annotations: ${{ steps.vars.outputs.annotations }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
