--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -29,6 +29,7 @@ jobs:
           echo $result
           echo ::set-output name=annotations::$result
       - name: print
+        if: ${{ failure() }}
         run: |
           echo ${{ toJson(steps.vars.outputs.annotations) }}
           echo "====="
