--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -49,6 +49,6 @@ jobs:
           output: |
             title: "Kotlint"
             summary: "Summary"
-            annotations: ${{ toJson(steps.vars.outputs.annotations) }}
+            annotations: ${{ steps.vars.outputs.annotations }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
