--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -10,3 +10,10 @@ jobs:
   lint:
     if: ${{ github.run_attempt != 1 }}
     uses: ./.github/workflows/call_ktlint.yml
+  tmp:
+    runs-on: ubuntu-latest
+    steps:
+      - name: print
+        run: |
+          echo "===sha==="
+          echo ${{ github.sha }}
