--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -38,3 +38,5 @@ jobs:
           output: |
             title: Summary
             summary: ${{ steps.vars.outputs.html }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
