--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -38,7 +38,7 @@ jobs:
           status: "completed"
           started_at: ${{ steps.vars.outputs.date }}
           output: |
-            title: Summary
+            title: "Summary"
             summary: ${{ steps.vars.outputs.html }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
