--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -27,8 +27,9 @@ jobs:
           )
           echo "::set-output name=date::$(date --iso-8601=seconds)"
           date --iso-8601=seconds
-          echo ${{ github.sha }}
+          echo ${{ toJson(github) }}
       - uses: octokit/request-action@v2.x
+        id: create_check_run_kotlint
         if: always()
         with:
           route: POST /repos/{owner}/{repo}/check-runs
