--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -27,7 +27,8 @@ jobs:
           )
           echo "::set-output name=date::$(date --iso-8601=seconds)"
           date --iso-8601=seconds
-          echo '${{ toJson(github) }}'
+          echo '${{ event.pull_request.head.sha }}'
+          echo '${{ event.sha }}'
       - uses: octokit/request-action@v2.x
         id: create_check_run_kotlint
         if: always()
@@ -36,14 +37,13 @@ jobs:
           owner: ${{ github.repository_owner }}
           repo: ${{ github.event.repository.name }}
           name: Result Dashboard
-          head_sha: ${{ github.sha }}
+          head_sha: ${{ event.pull_request.head.sha }}
           started_at: ${{ steps.vars.outputs.date }}
-        #          conclusion: "failure"
-        #          status: "completed"
-        #          output: |
-        #            title: "Result Dashboard"
-        #            summary: "hogehoge"
-        #            ${{ steps.vars.outputs.html }}
+          conclusion: "failure"
+          status: "completed"
+          output: |
+            title: "Result Dashboard"
+            summary: ${{ steps.vars.outputs.html }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: LouisBrunner/checks-action@v1.1.1
