--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -23,6 +23,12 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: ktlintFormat
+      - name: Cache main.kts
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/main.kts.compiled.cache
+          key: ${{ hashFiles('**/*.main.kts') }}
       - name: set
         if: ${{ failure() }}
         id: vars
