--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           arguments: ktlintFormat
       - name: Cache main.kts
-        if: ${{ failure() }}
+        if: ${{ always() }}
         uses: actions/cache@v3
         with:
           path: |
